iki/mysql-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mysql-deploy
  name: mysql-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-deploy
  template:
    metadata:
      labels:
        app: mysql-deploy
    spec:
      containers:
      - image: mysql:5.7
        name: mysql
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: mysql-persistent-volume
      volumes:
        - name: mysql-persistent-volume
          persistentVolumeClaim:
            claimName: mysql-pv-claim
